assets/sass/partials/_main.scss
/* ... */
[hidden] {
  display:none;
}

/**
 *  Main elements
 */

body {
  background: {
    color: $c_mainBg;
  }
  border: {
    top: {
      width: 5px;
      style: solid;
      color: $c_bodyTopLine;
    }
  }
  color: $c_mainText;
  font: {
    family: $f_baseFont;
    size: $f_main-px;
    size: $f_main;
    weight: 300;
  }
  line-height: 1.625;
}
::-moz-selection {
  background: {
    color: $c_selectionBg;
  }
  color: $c_selectionText;
}
::selection {
  background: {
    color: $c_selectionBg;
  }
  color: $c_selectionText;
}
a {
  color: $c_mainLink;
  text: {
    decoration: none;
  }
  img {
    margin: {
      bottom:-4px;
    }
  }
  &:focus {
    outline:thin dotted;
  }
  &:hover {
    color: $c_mainLinkHover;
    outline:0;
  }
  &:active {
    outline:0;
  }
}
p {
  margin: 0 0 16px;
  padding: 0;
}
b,
strong {
  font: {
    weight: 700;
  }
}
ol,
ul {
  margin: 0;
  padding: 0;
}
blockquote {
  color: $c_BlockquoteText;
  margin: 40px 40px 24px;
  ::before {
    color: $c_blockquoteBefore;
    content: "\201C";
    display: block;
    font: {
      size: $f_blockquoteBefore-px;
      size: $f_blockquoteBefore;
    }
    height: 0;
    left: -20px;
    position: relative;
    top: -10px;
  }
}
code {
  background: {
    color: $c_codeBg;
  }
  color: $c_codeText;
  font: {
    family:$f_codeFont;
    size:1em;
  }
}
kbd, samp {
  @extend code;
}
pre {
  @extend code;
  white-space:pre-wrap;
}
cite {
  font: {
    style: normal;
  }
}
abbr[title]{
  border: {
    bottom:1px dotted;
  }
}
dfn {
  font: {
    style:italic;
  }
}
hr {
  @include box-sizing(content-box);
  height:0;
}
mark {
  background: {
    color:$c_markBg;
  }
  color:$c_markText;
}
q {
  quotes:"\201C" "\201D" "\2018" "\2019";
}
small {
  font: {
    size: 80%;
  }
}
sub,sup {
  font: {
    size: 75%;
  }
  line-height:0;
  position:relative;
  vertical-align:baseline;
}
sup {
  top:-0.5em;
}
sub {
  bottom:-0.25em;
}
img {
  border: {
    width: 1px;
    style: solid;
    color: $c_borderImg;
  }
}
svg:not(:root) {
  overflow:hidden;
}
figure {
  margin:0;
}
header {
  background: {
    color: $c_mainBg
  }
  .wrap {
    padding: 40px 0;
  }
}
.floatclearing {
  &:before {
    content: " ";
    display: table;
  }
  &:after {
    clear: both;
    content: " ";
    display: table;
  }
}
.archive-pagination,
.clearfix,
.entry,
.entry-pagination,
.footer-widgets,
.nav-primary,
.nav-secondary,
.site-container,
.site-footer,
.site-header {
  @extend .floatclearing;
}
.site-inner {
  @extend .floatclearing;
  clear: both;
  margin: 0 auto;
  max-width: $d_full;
  padding: {
    top: 32px;
  }
}
.wrap {
  @extend .floatclearing;
  margin: 0 auto;
  max-width: $d_full;
}
.clearfloat {
  clear: both;
  padding: 0;
  margin: 0;
  line-height: 0;
  font: {
    size: 0em;
  }
}

/**
 * Title Area
 */

.header-full-width {
  .title-area {
    width: 100%;
  }
  .site-title {
    width: 100%;
  }
}
.site-header {
  .wrap,
  .widget-wrap {
    padding: 0;
  }
  .title-area {
    margin: 20px 0 0;
    background: {
      repeat: no-repeat;
      position: left;
    }
    float: left;
    font: {
      family: $f_baseFont;
      weight: 700;
    }
    width: $d_headerLogo;
  }
  .site-description {
    display: block;
    text: {
      indent: -9999px;
    }
    color: $c_logoText;
    font: {
      size: 16px;
      size: 1.6rem;
      weight: 300;
    }
    line-height: 1;
    margin: {
      bottom: 0;
    }
  }
  .site-title {
    font: {
      size: $f_mainH1-px;
      size: $f_mainH1;
    }
    line-height: 1;
    margin: 0 0 8px;
    text: {
      transform: none;
    }
    a {
      color: $c_logoTextLink;
      &:hover {
        color: $c_logoTextLinkHover;
      }
      display: block;
      text: {
        indent: -9999px;
      }
      float: left;
      min-height: 164px;
      width: 100%;
    }
  }
  section.widget {
    margin: {
      top: 10px;
    }
    &.widget_search {
     form {
       float: right;
     }
    }
  }
  .widget-area {
    float: right;
    text: {
      align: right;
    }
    max-width: $d_headerAside;
    overflow-x:hidden;
    color: $c_taglineTop;
    font: {
      size: $f_taglineTop-px;
      size: $f_taglineTop;
    }
    strong {
      color: $c_taglineTopBold;
    }
    .search-form {
      width: $d_sidebar;
    }
    a {
      color: $c_taglineLink;
      &:hover {
        color: $c_taglineLinkHover;
      }
    }
  }
  .header-widget-area {
    margin: {
      top: 20px;
    }
  }
  #yoast-top-right {
    margin: {
      bottom: 10px;
    }
  }
  .widget-title {
    display:none;
    visibility:hidden;
    + div {
      padding: {
        left: 0;
      }
    }
  }
}

/**
 * Structure and Layout
 */

.content {
  float: right;
  width: $d_mainColumn;
  max-width: 100%;
  #main-content-wrap {
    float: left;
    width: $d_mainContent;
    max-width:100%;
  }
}

.sidebar-content {
  .content {
    padding: {
      left: 60px;
    }
  }
}

.content-sidebar {
  .content {
    float: left;
  }
}

.full-width-content {
  .entry-content,
  .entry-header,
  .back-to-top {
    margin:0 auto;
    width: $d_mainColumn;
  }
  .content {
    width: 100%;
  }
}

/*
 * Primary Sidebar
 */

.sidebar-primary {
  float: right;
  width: $d_sidebar;
}

.sidebar-content {
  .sidebar-primary {
    float: left;
  }
}

/**
 * Secondary Sidebar
 */

.sidebar-secondary {
  float: left;
  width: ($d_sidebar/2);
}

/**
 * Forms
 */

fieldset {
  border:1px solid $c_fieldsetBorder;
  margin:0 2px;
  padding:.35em .625em .75em;
}

legend {
  border:0;
  padding:0;
}
/* ... */

